# Scheduled_Notification_System

./: README.md
backend/: .gitignore  manage.py  pyproject.toml
backend/Scheduled_Notification_System/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/notifications/: email.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/reports/: charts.py  pdf.py  report_builder.py  utils.py
backend/subscriptions/: models.py  serializers.py  urls.py  views.py
backend/subscriptions/migrations/: 0001_initial.py  0002_subscription_format.py  0003_rename_format_subscription_report_format.py
backend/templates/reports/: report_template.html
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  app.routes.ts  app.spec.ts
frontend/src/app/components/report-history/: report-history.component.html  report-history.component.scss  report-history.component.ts
frontend/src/app/components/subscription-form/: subscription-form.component.html  subscription-form.component.scss  subscription-form.component.ts
frontend/src/app/components/subscription-list/: subscription-list.component.html  subscription-list.component.scss  subscription-list.component.ts
frontend/src/app/models/: subscription.ts
frontend/src/app/services/: subscription.service.ts
